refactor: extract constants of type Field